--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,900&family=Dancing+Script:wght@400;500;600;700&family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,900&family=Dancing+Script:wght@400;500;600;700&family=Pacifico&family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 body {
   font-family: "Public Sans", sans-serif;
 }
 
 #brand {
-  font-family: "Dancing Script", cursive;
+  font-family: "Pacifico", cursive;
+}
+
+.paragraph1 {
+  font-family: "Pacifico", cursive;
 }
 
 #quote {
